# cplusplus-basis

./: CMakeLists.txt  README.md  main.cpp  opencv.cpp
Classes/: Class1.h  Class2.h  Truck.h  Vehicle.h
advanced/: DBAcess.h  FileIO.h  destructor.h  dynamic.h
poly/: Circle.h  Shape.h  Square.h
